fix - homepage text bubble showing up incorrectly in safari and on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,7 +34,10 @@ $border: 1px solid $white;
     position: fixed;
     bottom: 0;
     right: 0;
-    display: flex;
+    section {
+        text-align: center;
+        padding-right: 15px;
+    }
 }
 
 
@@ -726,11 +729,11 @@ main {
     width: 0;
     z-index: 1;
     border-style: solid;
-    border-width: 8px 0 0 12px;
-    border-color: transparent transparent transparent #ffffff;
-    top: 53%;
-    right: -12px;
-    margin-top: -4px;
+    border-color: #ffffff transparent;
+    border-width: 8px 6px 0;
+    bottom: -8px;
+    left: 50%;
+    margin-left: -6px;
 }
 
 //**********************************//
